0.14.1 (2017-07-29)
-------------------

 * [yi-keymap-vim] Added :new command
 * [yi-keymap-vim] Fixed parser for ":!"
 * Fixed yi-core dependency on dyre (it was still mentioned in package.yaml by accident)

0.14.0
------

 * yi-core now doesn't depend on dyre.
   Dynamic configuration support is now provided by yi-dynamic-configuration package.

0.13.7
------

 * [yi-keymap-vim] Include test data files in sdist

0.13.6
------

 * [yi-keymap-vim] Enable regexps for :substitute
 * [yi-keymap-vim] Various fixes regarding ex ranges
 * [yi-keymap-vim] Make trailing delimiter in :substitute optional 
 * [yi-keymap-vim] Fix behaviour of f,t,F,T when given a count
 * [yi-keymap-vim] Support all abbreviations for :nohlsearch
 * [yi-keymap-vim] . in relative ex ranges is optional
 * [yi-keymap-vim] Range support for :delete
 * [yi-keymap-vim] Support 'sub' abbreviation for substitute.
 * [yi-keymap-vim] Fix behaviour of f,t,F,T when given a count
 * [yi-keymap-vim] Implement visual paste
 * [yi-keymap-vim] Add supporting of pasting text on Ex
 * [yi-keymap-vim] Fix repeating replacement operators
 * Fix error when completing the empty text
 * Fixed hint spawning multiple interpreters
 * Fix the Windows build
 * Various performance improvements

0.13.5
------

 * Unbreak build with alex-3.2.1
 * [yi-keymap-cua] Expose default Cua config
 * Fix haddock generation for BufferImpl

0.13.4
------

 * alex >= 3.2.1 is now allowed as it was fixed
 * [yi-keymap-vim] Implement <C-d> and <M-d> in Ex mode
 * [yi-keymap-vim] Implement :registers command
 * [yi-keymap-emacs] Fix paragraph selection
 * Fix build with GHC 8.0.2

0.13.3
------

 * Blacklist alex >= 3.2.0

0.13.2
------

 * Update optparse-applicative version

0.13.1
------

 * pre-0.13 example user configs are now ported to 0.13

0.13.0
------

 * Keymaps, modes and frontends are split into separate packages.
   User configs are now supposed to be packages as well.
 * Building with GHC 7.8 is no longer supported