@@ -1,3 +1,8 @@
+Unreleased
+----------
+
+ * [yi-keymap-vim] Fixed visual selection not disappearing after doing visual replace or visual insert
+
 0.14.1 (2017-07-29)
 -------------------
 
